fixed a non-align-center bug

--- a/src/components/SDialog.css
+++ b/src/components/SDialog.css
@@ -19,7 +19,6 @@
   -webkit-transform: scale(1, 1);
   border-radius: 3px;
   -webkit-border-radius: 3px;
-  max-width: 60%;
 }
 .sdialog__wrapper--skin-green {
   background: rgba(96, 195, 171, 0.8);
